--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: gerenciando masquinas virtuales </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua: Madures y productividad en el desarrollo de software </li>
