--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: gerenciando masquinas virtuales </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
+         <li> Ansible: Infrastructura como codigo</li>
          <li> Integración continua: Madures y productividad en el desarrollo de software </li>
          <li>Kubernetes</li>
      </ul>
