--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: gerenciando masquinas virtuales </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
-         <li> Ansible: Infraestructura como codigo </li>
+         <li> Ansible: Su Infraestructura como codigo </li>
          <li> Integración continua: Madures y productividad en el desarrollo de software </li>
          <li>Kubernetes: Introduccion a la orquestacion de containers</li>
      </ul>
